# api-study

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt
apis/jsonplaceholder/: README.md  client.py  test_client.py
apis/openweathermap/: .env.example  README.md  client.py  test_client.py
apis/pokeapi/: README.md  client.py  test_client.py
prompts/: README.md  jsonplaceholder_posts.md  minimal_test_harness.md  openweather_auth_errors.md  pokeapi_pagination.md
src/api_study/: __init__.py  http.py
tests/: test_project_scaffold.py
tutorials/httpx-patterns/: 01_quickstart_basics.md  01_requests_to_httpx.md  02_async_client_lifecycle.md  README.md
