[project]
name = "api-study"
version = "0.1.0"
description = "Self-directed API client study projects for Python live coding interview prep."
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27",
  "requests>=2.32",
  "python-dotenv>=1.0",
]

[tool.pytest.ini_options]
pythonpath = ["src", "apis"]
testpaths = ["tests", "apis"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = ["src", "apis"]
